bk_ida/gccida/g1/layout_decl
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/stor-layout.c:801:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/stor-layout.c:802:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/stor-layout.c:807:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/stor-layout.c:813:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/stor-layout.c:814:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/stor-layout.c:905:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( BYTE5( type->block.abstract_origin) >> 1) & 0x7F] != MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/layout_decl/src/obj/stor-layout.o] Error 1
